[package]
name = "heycli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
pico-args = "0.5.0"
ratatui = "0.24.0"
regex = "1.10.3"
serde = "1.0.196"
sysinfo = "0.30.5"
tui-input = "0.8.0"
