[package]
name = "heycli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
pcap = "1.2.0"
pico-args = "0.5.0"
ratatui = "0.24.0"
regex = "1.10.3"
rev_buf_reader = "0.3.0"
serde = { version = "1.0.196", features = ["derive"] }
sysinfo = "0.30.5"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
tui-input = "0.8.0"
